--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,10 +14,11 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
+      - uses: pnpm/action-setup@latest
       - name: Build
         id: build
         run: |
-          npm ci && npm run build
+          pnpm i && pnpm run build
           mkdir ${{ env.PLUGIN_NAME }}
           cp README.md package.json manifest.json ${{ env.PLUGIN_NAME }}
           mv dist ${{ env.PLUGIN_NAME }}
