--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -15,6 +15,8 @@ jobs:
         with:
           node-version: '22.x'
       - uses: pnpm/action-setup@v4
+        with:
+          version: 9.7.0
       - name: Build
         id: build
         run: |
