Revert "Fix: downgrade logseq version for file picker"
This reverts commit ac03f8e2f9cb5095a2c9cbcb6226bc2e1d05d871.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,11 +14,10 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
-      - uses: pnpm/action-setup@latest
       - name: Build
         id: build
         run: |
-          pnpm i && pnpm run build
+          npm ci && npm run build
           mkdir ${{ env.PLUGIN_NAME }}
           cp README.md package.json manifest.json ${{ env.PLUGIN_NAME }}
           mv dist ${{ env.PLUGIN_NAME }}
