Revert "Build: fix pnpm action version"
This reverts commit b9a85cb25264110301b45b1d7d0b0774214b3fdf.

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -14,7 +14,7 @@ jobs:
         uses: actions/setup-node@v3
         with:
           node-version: '22.x'
-      - uses: pnpm/action-setup@v4
+      - uses: pnpm/action-setup@latest
       - name: Build
         id: build
         run: |
