--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -19,7 +19,7 @@ jobs:
         run: |
           npm ci && npm run build
           mkdir ${{ env.PLUGIN_NAME }}
-          cp README.md package.json manifest.json ${{ env.PLUGIN_NAME }}
+          cp README.md package.json manifest.json icon.png ${{ env.PLUGIN_NAME }}
           mv dist ${{ env.PLUGIN_NAME }}
           zip -r ${{ env.PLUGIN_NAME }}.zip ${{ env.PLUGIN_NAME }}
           ls
